--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="Name">
-		<h1>AravindhYox.</h1>
+		<h1>Abiyet Khan</h1>
 	</div>
 
 	<div class="Work">
@@ -30,19 +30,19 @@
 	<div class="Contact">
 
 		<div class="ico">
-			<a href="https://github.com/Aravindhyox/">
+			<a href="https://github.com/Abiyet/">
 				<i class="fa fa-github social" title="Github"></i>
 			</a>
 		</div>
 
 		<div class="ico">
-			<a href="https://t.me/aravindhyox">
+			<a href="https://t.me/easyname69">
 				<i class="fa fa-telegram social" title="Telegram"></i>
 			</a>
 		</div>
 
 		<div class="ico">
-			<a href="mailto:aravindhyox@gmail.com">   
+			<a href="mailto:onlyloss@proton.me">   
 				<i class="fa fa-envelope social" title="E-Mail"></i>
 			</a>
 		</div>
@@ -50,7 +50,7 @@
 	</div>
 
 	<footer class="footer">
-		<a href="https://aravindhyox.github.io/">Aravindh Yox</a>		
+		<a href="https://Abiyetkhan.github.io/">Abiyet khan</a>		
 	</footer>
 
 </body>
