--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="Contact">
 
 		<div class="ico">
-			<a href="https://github.com/Abiyet/">
+			<a href="https://github.com/Abiyet7/">
 				<i class="fa fa-github social" title="Github"></i>
 			</a>
 		</div>
@@ -50,7 +50,7 @@
 	</div>
 
 	<footer class="footer">
-		<a href="https://Abiyetkhan.github.io/">Abiyet khan</a>		
+		<a href="https://abiyetkhan.github.io/my-portfolio/">Abiyet khan</a>		
 	</footer>
 
 </body>
