--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 	<div class="Contact">
 
 		<div class="ico">
-			<a href="https://github.com/Abiyet7/">
-				<i class="fa fa-github social" title="Github"></i>
-			</a>
+	<a href="https://www.tiktok.com/@abiyet7">
+		<i class="fa fa-tiktok social" title="TikTok"></i>
+	</a>
 		</div>
-
+		
 		<div class="ico">
 			<a href="https://t.me/easyname69">
 				<i class="fa fa-telegram social" title="Telegram"></i>
