--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 		<div class="ico">
 	<a href="https://www.tiktok.com/@abiyet7">
-		<i class="fa fa-tiktok social" title="TikTok"></i>
+		<img src="https://upload.wikimedia.org/wikipedia/commons/6/69/TikTok_logo_2021.svg" alt="TikTok" style="width: 30px; height: 30px;">
 	</a>
 		</div>
 		
