--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="Name">
-		<h1>Abiyet Khan</h1>
+		<h1>0xAby</h1>
 	</div>
 
 	<div class="Work">
@@ -29,10 +29,10 @@
 
 	<div class="Contact">
 
-		<div class="ico">
-	<a href="https://www.tiktok.com/@abiyet7">
-		<img src="https://upload.wikimedia.org/wikipedia/commons/6/69/TikTok_logo_2021.svg" alt="TikTok" style="width: 30px; height: 30px;">
-	</a>
+		<div class="ico">  
+		<a href="https://github.com/Abiyet7/">  
+			<i class="fa fa-github social" title="Github"></i>  
+		</a>  
 		</div>
 		
 		<div class="ico">
@@ -50,7 +50,7 @@
 	</div>
 
 	<footer class="footer">
-		<a href="https://abiyetkhan.github.io/my-portfolio/">Abiyet khan</a>		
+		<a href="https://abiyetkhan.github.io/my-portfolio/">Abiyet!!</a>		
 	</footer>
 
 </body>
